@@ -1,3 +1,4 @@
+use strict;
 use Test::More tests => 3;
 
 use_ok('Search::Xapian');
