@@ -1,4 +1,5 @@
 #!/usr/bin/perl -W
+use strict;
 # Before `make install' is performed this script should be runnable with
 # `make test'. After `make install' it should work as `perl test.pl'
 
